# PythonCourse

./: README.md
Contract/: contract.py  setup.cfg
Contract/tests/: conftest.py  test_contract_arg_types.py  test_contract_raises.py  test_contract_return_type.py
Game15/: game.py  pyproject.toml
Game15/tests/: test_is_game_finished.py  test_perform_move.py  test_shuffle_field.py  test_user_input.py
GamePoker/: poker.py  pyproject.toml
GamePoker/tests/: compare_combinations_test.py  double_pair_test.py  flush_test.py  full_house_test.py  high_card_test.py  pair_test.py  quads_test.py  royal_flush_test.py  straight_flush_test.py  straight_test.py  test_data.py  triplet_test.py
MyAwesomeScript/: pyproject.toml  setup.cfg  setup.py
MyAwesomeScript/myawesomescript/: __init__.py  command_line.py  cowsay.py  highlight.py  time.py
MyTodo/: README.md  pyproject.toml  setup.cfg  setup.py
MyTodo/mytodo/: actions.py  command_line.py  model.py  storage.py
Parser/: pyproject.toml  setup.cfg
Parser/parser/: __main__.py  network.py  process.py  storage.py  user.py
Practices/: decorator.py  task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py
TaskTracking/: README.md
TaskTracking/tests/: conftest.py  test_done_command.py  test_representations.py  test_to_read_item.py  test_undone_command.py
TaskTracking/todo/: __main__.py  commands.py  custom_exceptions.py  models.py  reflection.py  runtime.py  storage.py
