[tool.poetry]
name = "Game15"
version = "0.1.0"
description = "15 puzzle implementation"
authors = ["IdeaSeeker <stroganov.n.36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
