[tool.poetry]
name = "MyTodo"
version = "0.1.0"
description = ""
authors = ["IdeaSeeker <stroganov.n.36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8 = "^3.7"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
