[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["IdeaSeeker <stroganov.n.36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
argparse = "^1.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
safety = "^1.10.3"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
